# necst-msgs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html  package.xml
.github/workflows/: gh-pages.yml  test.yml
docs/: generate_docs.py
install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
install/necst_msgs/share/necst_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
msg/: AlertMsg.html  AlertMsg.msg  AntennaAzUnwrapStatus.html  AntennaAzUnwrapStatus.msg  AntennaCommandQueueStatus.html  AntennaCommandQueueStatus.msg  AntennaPointingStatus.html  AntennaPointingStatus.msg  AntennaSectionStatus.html  AntennaSectionStatus.msg  BiasMsg.html  BiasMsg.msg  Binning.html  Binning.msg  Boolean.html  Boolean.msg  CCDMsg.html  CCDMsg.msg  CalcLog.html  CalcLog.msg  ChopperMsg.html  ChopperMsg.msg  Clock.html  Clock.msg  ControlStatus.html  ControlStatus.msg  CoordArrayMsg.html  CoordArrayMsg.msg  CoordCmdMsg.html  CoordCmdMsg.msg  CoordMsg.html  CoordMsg.msg  DeviceReading.html  DeviceReading.msg  DomeCommand.html  DomeCommand.msg  DomeLimit.html  DomeLimit.msg  DomeOC.html  DomeOC.msg  (+50 more)
srv/: ApplySpectralRecordingSetup.html  ApplySpectralRecordingSetup.srv  AuthoritySrv.html  AuthoritySrv.srv  CCDCommand.html  CCDCommand.srv  ClearSpectralRecordingSetup.html  ClearSpectralRecordingSetup.srv  ComDelaySrv.html  ComDelaySrv.srv  CoordCmd.srv  CoordinateCommand.html  CoordinateCommand.srv  CoordinateCommandwq.html  DomeLimit.html  DomeLimit.srv  DomeOC.html  DomeOC.srv  DomeSync.html  DomeSync.srv  File.html  File.srv  ObservationMode.html  ObservationMode.srv  RecordSrv.html  RecordSrv.srv  ScanBlockCommand.html  ScanBlockCommand.srv  SetSpectralRecordingGate.html  SetSpectralRecordingGate.srv
(+96 files in other folders)
